--- a/about.html
+++ b/about.html
@@ -130,8 +130,10 @@
                 yours and My long term goal is I want to be one of the reasons for the success of my organization and I
                 want to see it as a bench mark to other organization.</p>
               <p>My ethic is <b>“I never neglect an opportunity for my improvement”</b>.</p>
+       
 
             </font>
+            <h6>Find more about me <a href="https://sourcerer.io/winzcode">SOURCERER</a></h6>
           </div>
         </div>
       </div>
