--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
        
 
             </font>
-            <h6>Find more about me <a href="https://sourcerer.io/winzcode">SOURCERER</a></h6>
+            <h6>Find more about me <a href="https://sourcerer.io/winzcode27">SOURCERER</a></h6>
           </div>
         </div>
       </div>
