--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
               <p>My ethic is <b>“I never neglect an opportunity for my improvement”</b>.</p>
 
             </font>
+            <h6>Find more about me <a href="https://sourcerer.io/winzcode27">SOURCERER</a></h6>
           </div>
         </div>
       </div>
